# mlstudio_backend

./: .gitignore  MANIFEST.in  README.md  make-wheel.bat  package-lock.json  pyproject.toml  setup.py  version.info
mlstudio_backend/: app.py  mlflow-auth.ipynb  mlflow.ipynb  test-code.ipynb  test-compress.ipynb
mlstudio_backend/service/: chart_data.py  grid_data.py  json_data.py  read_file.py  text_data.py
src/mlstudio_backend/: __init__.py
src/mlstudio_backend/service/: grid_data.py  text_data.py
tests/: test.py
